--- a/doc/03262021.md
+++ b/doc/03262021.md
@@ -1,6 +1,6 @@
 # SF
 ## 1.搭建Service Fabric
-- 创建sf集群 三节点,选用推荐配置2CPU
+- 创建sf集群 三节点,选用推荐配置2CPU 选择相应的OS版本需要code可以正常运行
 - 创建keyVault使用脚本创建或手动创建自签名证书并绑定sf集群
 - 创建ACR用来存储docker构建的image
 ## 2.创建SF集群应用程序
@@ -9,6 +9,7 @@
 - 为代码设置运行环境dockerfile(OS,开发环境,运行端口,挂载证书,配置站点),xml(设置映射端口,挂载卷,设置集群运行数量,运行方式(process hv),访问类型,安全设置)
 ## 3.运行sf集群
 - 挂载Vloume驱动应用
+
 用于 Windows 的 Azure 资源管理器部署命令：
 PowerShell复制
 
@@ -16,6 +17,7 @@ PowerShell复制
 .\DeployAzureFilesVolumeDriver.ps1 -subscriptionId [subscriptionId] -resourceGroupName [resourceGroupName] -clusterName [clusterName] -windows
 ```
 DeployAzureFilesVolumeDriver.ps1
+
 ```PowerShell
 param(
     [Parameter(Mandatory=$true)]
@@ -76,7 +78,8 @@ Write-Host "New-azResourceGroupDeployment -ResourceGroupName $resourceGroupName 
 New-azResourceGroupDeployment -ResourceGroupName $resourceGroupName -TemplateUri $templateUri -TemplateParameterFile $templateParameterFile -clusterName $clusterName -appPackageUrl "$appPackageUrl" -Name $name -listenPort $listenPort -Verbose
 
 if (Test-Path $templateParameterFile) {Remove-Item $templateParameterFile -Force}
- 
 ```
+
 - 发布image到sf上
 - 配置负载均衡策略和路由策略,开启相关端口
+
